--- a/instgram api practice/main.css
+++ b/instgram api practice/main.css
@@ -30,8 +30,8 @@ body{
 }
 
 .post-photo{
-    height: 550px;
-    width: 550px;
+    height: auto;
+    width: auto;
     display: block;
     margin-left: 25%;
     margin-right: auto;
